updated review and rating methods
